refactor/remove hardcoded post types list and clean up javadocs